# tbe-qml-toolbox-spike

./: .gitignore  CMakeLists.txt  ImageProvider.cpp  ImageProvider.h  README.md  main.cpp  main.qml  shared.h  tbe-toolbox-spike.pro  views.qrc
gui/: PaletteItem.qml  Toolbox.qml  ToolboxGroup.cpp  ToolboxGroup.h  ViewItem.qml  gui.qrc  itemCreation.js
listview/: Toolbox.qml  expandingdelegates.qml
listview/content/: PaletteItem.qml  RecipesModel.qml  ViewItem.qml  itemCreation.js
